<resources>
    <string name="app_name">Chess Piece Values Court</string>
    <string name="white">White</string>
    <string name="_0">0</string>
    <string name="_1_points">+1 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="_5_points">+5 Points</string>
    <string name="_9_points">+9 Points</string>
    <string name="black">Black</string>
    <string name="reset">Reset</string>
    <string name="chess_piece_values_indicate_the_value_of_the_different_chess_pieces_and_how_they_relate_to_each_other_every_piece_has_different_strengths_and_weaknesses_a_pawn_is_worth_one_point_a_knight_or_bishop_is_worth_three_points_a_rook_is_worth_five_points_and_a_queen_is_worth_nine_points">Chess piece values indicate the value of the different chess pieces and how they relate to each other. Every piece has different strengths and weaknesses, A pawn is worth one point, a knight or bishop is worth three points, a rook is worth five points and a queen is worth nine points.</string>
</resources>