<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/white"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="24dp"
                        android:text="@string/_0"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addOneForWhite"
                        android:text="@string/_1_points"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addThreeForWhite"
                        android:text="@string/_3_points"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addFiveForWhite"
                        android:text="@string/_5_points"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addNineForWhite"
                        android:text="@string/_9_points"
                        tools:ignore="UsingOnClickInXml" />


                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/black"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="24dp"
                        android:text="@string/_0"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addOneForBlack"
                        android:text="@string/_1_points"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addThreeForBlack"
                        android:text="@string/_3_points"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addFiveForBlack"
                        android:text="@string/_5_points"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="addNineForBlack"
                        android:text="@string/_9_points"
                        tools:ignore="UsingOnClickInXml" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="32dp"
                    android:onClick="resetScore"
                    android:text="@string/reset"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="32dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/chess_piece_values_indicate_the_value_of_the_different_chess_pieces_and_how_they_relate_to_each_other_every_piece_has_different_strengths_and_weaknesses_a_pawn_is_worth_one_point_a_knight_or_bishop_is_worth_three_points_a_rook_is_worth_five_points_and_a_queen_is_worth_nine_points"
                    android:textColor="#616161"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>